--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="importmap-shim" src="./x/importmap.json"></script>
 	<script defer src="./node_modules/es-module-shims/dist/es-module-shims.js"></script>
+	<script type="module-shim" src="./x/main.js"></script>
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
 	<title>Frontend Mentor | Kanban task management web app</title>
 </head>
 <body>
-
+	<header-element></header-element>
+	<main-panel></main-panel>
+	<sidebar-panel></sidebar-panel>
 </body>
 </html>
