--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 	<script type="importmap-shim" src="./x/importmap.json"></script>
 	<script defer src="./node_modules/es-module-shims/dist/es-module-shims.js"></script>
 	<script type="module-shim" src="./x/main.js"></script>
+	<link rel="stylesheet" href="index.css">
 	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;500;700;800&display=swap" rel="stylesheet">
 	<title>Frontend Mentor | Kanban task management web app</title>
 </head>
 <body>
-	<header-element></header-element>
-	<main-panel></main-panel>
-	<sidebar-panel></sidebar-panel>
+	<div class=panels>
+		<sidebar-panel></sidebar-panel>
+		<div class="column">
+			<header-panel></header-panel>
+			<main-panel></main-panel>
+		</div>
+	</div>
 </body>
 </html>
